Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25006

Failed assertion on executing EXPLAIN DELETE statement as a prepared statement

    XMLWordPrintable

Details

    Description

      Running of the following test case

      CREATE TABLE t1(c1 CHAR(255) PRIMARY KEY);
      PREPARE stmt FROM 'EXPLAIN DELETE b FROM t1 AS a JOIN t1 AS b';
      EXECUTE stmt;
      

      results in firing of the assertion

       DBUG_ASSERT(! is_set());
      

      in the method Diagnostics_area::set_eof_status.

      Attachments

        Issue Links

          Activity

            People

              shulga Dmitry Shulga
              shulga Dmitry Shulga
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 1.5h
                  2d 1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.